Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/patterns/PatternErrorRecovery.out
PatternErrorRecovery.java:11:18: compiler.err.pattern.expected
- compiler.note.preview.filename: PatternErrorRecovery.java, DEFAULT
- compiler.note.preview.recompile
1 error
